fix: restore background color of select options, limit button and select height and wrapping, better hover effects, decorate scrollbars ans text selection

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,13 @@
 :root {
-  --foreground-color: #000;
+  --foreground-color: #000000;
   --background-color: 255, 255, 255;
-  --selected-color: #444;
+  --selected-color: #888;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-color: #fff;
+    --foreground-color: #ffffff;
     --background-color: 0, 0, 0;
-    --selected-color: #bbb;
   }
 }
 
@@ -38,7 +37,7 @@ body {
 }
 
 .curtain {
-  background-color: rgba(var(--background-color),0.8);
+  background-color: rgba(var(--background-color), 0.8);
   height: 0%;
   left: 0;
   overflow-x: hidden;
@@ -80,7 +79,7 @@ body {
   padding: 0;
   text-align: center;
   text-overflow: ellipsis;
-  text-wrap: pretty;
+  transition: 0.2s;
   width: 8rem;
 }
 
@@ -98,14 +97,18 @@ body {
   font-size: 5rem;
   font-weight: lighter;
   grid-column: span 3;
-  padding-bottom: 1rem;
+  line-height: 0;
+  margin: 3rem auto;
+  padding: 0;
   text-align: center;
+  transition: 0.5s;
   width: 100%;
 }
 
 .btn {
-  background-color: rgba(var(--background-color),1);
+  background-color: rgba(var(--background-color), 1);
   font-weight: bold;
+  max-height: 1.5rem;
   padding: 0.25rem 0.5rem;
 }
 
@@ -132,16 +135,32 @@ input[type="file"]::file-selector-button {
   width: max-content;
 }
 
+.select option {
+  color: var(--foreground-color);
+  background-color: rgba(var(--background-color), 1);
+}
+
 .bg-list {
-  height: 15vh;
+  height: 12vh;
   max-width: 100%;
+  text-wrap: pretty;
   width: 100%;
 }
 
-.menu-option:hover,
-.btn:hover {
+.btn-curtain-close:hover {
+  color: var(--selected-color);
+  scale: 1.25;
+  transition: 0.5s
+}
+
+.menu-item:hover {
+  border-color: var(--selected-color);
   color: var(--selected-color);
   transition: 0.2s;
+}
+
+.color-picker:hover, .bg-list:hover {
+  filter: brightness(1.2);
 }
 
 .bordered {
@@ -177,3 +196,31 @@ input[type="file"]::file-selector-button {
   grid-row: span 1;
 }
 
+::-moz-selection { 
+  color: rgba(var(--background-color), 1);
+  background: var(--selected-color);
+}
+
+::selection {
+  color: rgba(var(--background-color), 1);
+  background: var(--selected-color);
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--foreground-color);
+  border-radius: 0.25rem;
+  transition: 0.2s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--selected-color);
+  transition: 0.2s;
+}
